--- a/JavaScript/Alert.html
+++ b/JavaScript/Alert.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Alert Çıkarma</title>
-    <script>
-        alert('Miray')
-    </script>
+
 </head>
 <body>
-
-
+    <script src="JavaScript.js"></script>
 </body>
 </html>
