--- a/JavaScript/Corona_Anket/Corona_Anket.html
+++ b/JavaScript/Corona_Anket/Corona_Anket.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <title>Corona Çalışma Anketi</title>
-    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
@@ -19,7 +18,7 @@
     <section id="questions">
         <div class="bg-secondary py-3">
             <div class="container">
-                <form class="text-white">
+                <form class="question-form text-white">
 
                     <div class="my-4">
                         <p>1. Ofiste daha verimli çalışıyorum</p>
