sonucu ekrana yazdırdık

--- a/JavaScript/Corona_Anket/Corona_Anket.html
+++ b/JavaScript/Corona_Anket/Corona_Anket.html
@@ -14,6 +14,13 @@
         </div>
     </section>
 
+    <div class="result d-none py-4 bg-white text-center">
+        <div class="container lead">
+            <p>
+                <span class=" text-danger display-4 p-3">%0 </span> ofise dönmek istiyorsun
+            </p>
+        </div>
+    </div>
 
     <section id="questions">
         <div class="bg-secondary py-3">
